--- a/README
+++ b/README
@@ -1,3 +1,4 @@
+--- Poolboy ---
 --- Work in Progress (maybe never finished...) ---
 
 This is the Poolboy repository. Poolboy was started based on a small overheated discussion between me and my neighbour. 
